# expressive

./: .gitignore  CHANGELOG.md  README.en.md  README.md  expressive.py  expressive_gui.py  pyproject.toml
.github/workflows/: packaging.yml
expressions/: base.py  brec.py  dyn.py  ene.py  pitd.py  tenc.py  voic.py
locales/: app.pot  generate.py
locales/en/LC_MESSAGES/: app.po
locales/zh_CN/LC_MESSAGES/: app.po
tests/: test_cli.py  test_expression_base.py  test_expressive.py  test_seqtool.py  test_wavtool.py  test_worker.py
utils/: cli.py  log.py  seqtool.py  ui.py  ustx.py  wavtool.py
