[build-system]
requires = ["hatchling", "babel"]
build-backend = "hatchling.build"

[project]
name = "expressive"
version = "0.5.0"
description = "A tool to migrate expressions from real singers to DiffSingers"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy<2",
    "tensorflow==2.10",
    "crepe @ git+https://github.com/NewComer00/crepe.git@master",
    "swift-f0",
    "oyaml",
    "fastdtw",
    "scipy",
    "yamlcore",
    "platformdirs",
    "librosa",
    "soundfile",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
    "lazy-string",
    "rich-argparse",
    "rich",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cuda-runtime-cu11",
    "nvidia-cuda-nvcc-cu11",
    "nvidia-cublas-cu11",
    "nvidia-cusolver-cu11",
    "nvidia-cusparse-cu11",
    "nvidia-cufft-cu11",
    "nvidia-curand-cu11",
    "nvidia-cudnn-cu11==8.*",
]
gui = [
    "nicegui>=3",
    "pywebview>=6.0",
    "pywin32; platform_system=='Windows'",
    "pywinstyles; platform_system=='Windows'",
    "markdown",
]
dev = [
    "pyinstaller==6.11.1",
    "backports.tarfile; python_version<'3.12'",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.15.1",
    "python-semantic-release>=10.5.3",
    "hatchling>=1.29",
    "babel>=2.18",
]
all = [
    "expressive[gpu,gui,dev]",
]

[project.scripts]
expressive = "expressive:main"
expressive-gui = "expressive_gui:main"  # Intentional; for commandline interaction

[tool.hatch.build.hooks.custom]
path = "build/hatch_build.py"
vendor-static-deps = [
    ["wavesurfer/LICENSE",           "https://unpkg.com/wavesurfer.js@7.8.10/LICENSE"],
    ["wavesurfer/wavesurfer.esm.js", "https://unpkg.com/wavesurfer.js@7.8.10/dist/wavesurfer.esm.js"],
    ["wavesurfer/regions.esm.js",    "https://unpkg.com/wavesurfer.js@7.8.10/dist/plugins/regions.esm.js"],
]

[tool.hatch.build.targets.wheel]
packages = ["expressions", "utils"]
include = [
    "expressive.py",
    "expressive_gui.py",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.babel]
[[tool.babel.mappings]]
method = "ignore"
pattern = ["tests/**.py", "dist/**.py", "build/**.py"]

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"
keywords = ["_", "_l", "_lf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=utils",
    "--cov=expressions",
    "--cov=expressive",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_audio: marks tests that require audio files",
    "requires_gpu: marks tests that require GPU/CUDA",
]

log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
source = ["utils", "expressions", "expressive"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
]

ignore = [
    "E203",  # allow whitespace before ':'
    "E402",  # allow dynamic imports
    "E731",  # allow lambda assignment
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["__version__.py:VERSION"]
tag_format = "v{version}"
major_on_zero = false  # TODO: set to true after the first stable release
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }
ignore_token_for_push = true  # See https://github.com/dxvidparham/psr-deploy-keys-for-protected-branches

[tool.semantic_release.publish]
upload_to_vcs_release = false  # Assets will be built and attached to the GitHub release by another workflow
dist_glob_patterns = []
